tests/testcases/invalid/06_unterminated_comment_eof.ciel
int main() {
    int x = 1; /* comment never closes...
}
